Add all known Vehicle endpoints
